<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res-auto">

    <com.samsung.android.settings.widget.SecInsetCategoryPreference />

    <Preference
        android:key="unica_prayer_times_countdown"
        android:title="@string/unica_pt_next_prayer_title"
        android:summary="@string/unica_pt_next_prayer_summary"
        settings:controller="io.mesalabs.unica.settings.prayertimes.PrayerTimesCountdownPreferenceController">
        <intent
            android:action="io.mesalabs.unica.action.PRAYER_TIMES_SETTINGS"
            android:targetPackage="io.mesalabs.unica.prayertimes" />
    </Preference>

    <com.samsung.android.settings.widget.SecInsetCategoryPreference />

    <SecSwitchPreference
        android:key="unica_prayer_times_enabled"
        android:title="@string/unica_pt_enabled_title"
        android:summary="@string/unica_pt_enabled_summary"
        settings:controller="io.mesalabs.unica.settings.prayertimes.PrayerTimesSystemTogglePreferenceController" />

    <com.samsung.android.settings.widget.SecInsetCategoryPreference />

    <PreferenceCategory android:title="@string/unica_pt_general_title">
        <SecDropDownPreference
            android:key="unica_prayer_times_method"
            android:title="@string/unica_pt_method_title"
            android:entries="@array/unica_pt_method_entries"
            android:entryValues="@array/unica_pt_method_values"
            settings:controller="io.mesalabs.unica.settings.prayertimes.PrayerTimesSystemListPreferenceController" />

        <SecDropDownPreference
            android:key="unica_prayer_times_madhab"
            android:title="@string/unica_pt_madhab_title"
            android:entries="@array/unica_pt_madhab_entries"
            android:entryValues="@array/unica_pt_madhab_values"
            settings:controller="io.mesalabs.unica.settings.prayertimes.PrayerTimesSystemListPreferenceController" />
    </PreferenceCategory>

    <com.samsung.android.settings.widget.SecInsetCategoryPreference />

    <PreferenceCategory android:title="@string/unica_pt_notifications_title">
        <SecSwitchPreference
            android:key="unica_prayer_times_early_warning"
            android:title="@string/unica_pt_early_warning_title"
            android:summary="@string/unica_pt_early_warning_summary"
            settings:controller="io.mesalabs.unica.settings.prayertimes.PrayerTimesSystemTogglePreferenceController" />

        <SecDropDownPreference
            android:key="unica_prayer_times_early_minutes"
            android:title="@string/unica_pt_early_minutes_title"
            android:entries="@array/unica_pt_early_minutes_entries"
            android:entryValues="@array/unica_pt_early_minutes_values"
            settings:controller="io.mesalabs.unica.settings.prayertimes.PrayerTimesSystemListPreferenceController" />
    </PreferenceCategory>

    <com.samsung.android.settings.widget.SecInsetCategoryPreference />

    <PreferenceCategory android:title="@string/unica_pt_sounds_title">
        <SecDropDownPreference
            android:key="unica_prayer_times_sound_fajr"
            android:title="@string/unica_pt_sound_fajr_title"
            android:entries="@array/unica_pt_adhan_entries"
            android:entryValues="@array/unica_pt_adhan_values"
            settings:controller="io.mesalabs.unica.settings.prayertimes.PrayerTimesSystemListPreferenceController" />

        <SecDropDownPreference
            android:key="unica_prayer_times_sound_dhuhr"
            android:title="@string/unica_pt_sound_dhuhr_title"
            android:entries="@array/unica_pt_adhan_entries"
            android:entryValues="@array/unica_pt_adhan_values"
            settings:controller="io.mesalabs.unica.settings.prayertimes.PrayerTimesSystemListPreferenceController" />

        <SecDropDownPreference
            android:key="unica_prayer_times_sound_asr"
            android:title="@string/unica_pt_sound_asr_title"
            android:entries="@array/unica_pt_adhan_entries"
            android:entryValues="@array/unica_pt_adhan_values"
            settings:controller="io.mesalabs.unica.settings.prayertimes.PrayerTimesSystemListPreferenceController" />

        <SecDropDownPreference
            android:key="unica_prayer_times_sound_maghrib"
            android:title="@string/unica_pt_sound_maghrib_title"
            android:entries="@array/unica_pt_adhan_entries"
            android:entryValues="@array/unica_pt_adhan_values"
            settings:controller="io.mesalabs.unica.settings.prayertimes.PrayerTimesSystemListPreferenceController" />

        <SecDropDownPreference
            android:key="unica_prayer_times_sound_isha"
            android:title="@string/unica_pt_sound_isha_title"
            android:entries="@array/unica_pt_adhan_entries"
            android:entryValues="@array/unica_pt_adhan_values"
            settings:controller="io.mesalabs.unica.settings.prayertimes.PrayerTimesSystemListPreferenceController" />
    </PreferenceCategory>

</PreferenceScreen>
